# borderless

./: .gitignore  CMakeLists.txt  README.md  borderless.sln  build.py  innosetup.iss
.github/workflows/: build.yml
borderless/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Resources.qrc  borderless.csproj  borderless16.xpm  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
borderless/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
linuxdeployqt/: build.sh
linuxdeployqt/usr/share/applications/: borderless.desktop
source/: Resources.qrc  borderless.pro  borderless.xpm  mainwindow.cpp  mainwindow.h  mainwindow.ui
